--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
 header h1 {
     color: aqua;
 }
+nav ul {padding: 0;}
 nav ul li {
     float: left;
+    list-style-type: none;
 }
 nav ul li a {
     display: block;
@@ -17,4 +19,5 @@ main img {
 }
 footer {
     text-align: center;
+    clear: both;
 }
